# deep-context-federation

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: agent_context_gate_policy.example.json  agent_ready_profile.example.json  deep_context_federation.example.json  efficiency_gate_policy.example.json  quality_gate_policy.example.json
examples/fixtures/: advisory_code_map.json  codegraph_export.json  current_truth_snapshot.json  evidence_authority_explorer.json  project_surface_map.json  symbol_graph_export.json
src/deep_context_federation/: __init__.py  adapters.py  adjudicate.py  agent_ci.py  agent_context.py  agent_context_gate.py  agent_discover.py  agent_handoff.py  agent_handoff_verify.py  agent_model_input.py  agent_onboard.py  agent_profile.py  agent_profile_init.py  agent_ready.py  agent_route.py  bench.py  bootstrap.py  builder.py  cache.py  capabilities.py  cli.py  compose.py  context_advantage.py  context_pack.py  diff.py  doctor.py  efficiency_gate.py  efficiency_report.py  entrypoint_decision.py  graph.py  input_fingerprint.py  intake.py  manifest.py  memory_ledger.py  model_entrypoint_selection.py  native_integration.py  operator_context.py  public_boundary.py  quality_gate.py  query.py  (+15 more)
tests/: test_deep_context_federation.py
