[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deep-context-federation"
version = "0.39.0"
description = "Read-only federation layer for code graphs, evidence artifacts, operator projections, and advisory context maps."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nokiy Liao" }
]
keywords = [
  "code-intelligence",
  "knowledge-graph",
  "evidence",
  "governance",
  "read-only",
  "agent-tools"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Documentation"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dcf = "deep_context_federation.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
